add popup for drawing name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="failed_to_save_drawing">Failed to save drawing</string>
     <string name="drawing_saved">Drawing saved</string>
     <string name="photo_deleted">Photo deleted</string>
+    <string name="insert_name_text">Enter drawing name</string>
+    <string name="save_btn">Save</string>
+    <string name="insert_name_hint">name…</string>
 </resources>
